# studybuddy

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  app.py  deploy.k8s.yml  explore.ipynb  main.py  models.py  prompts.py  pyproject.toml  settings.py
.flox/: env.json
.flox/env/: manifest.toml
agents/: prompts.py  studybuddy.py
manifests/: deploy.k8s.yml
